--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <meta property="og:url" content="http://www.aua.kro.kr/" />
 <meta property="og:title" content="ㅐ,ㅔ 통합 협회" />
 <meta property="og:description" content=""ㅔ"와 "ㅐ"의 구분은 더 이상 실질적인 필요성이 없으므로, 모든 경우에서 "ㅐ"로 통일하여 사용하는 것이 바람직합니다." />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="in.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="http://www.aua.kro.kr/" />
 <meta property="twitter:title" content="ㅐ,ㅔ 통합 협회" />
 <meta property="twitter:description" content=""ㅔ"와 "ㅐ"의 구분은 더 이상 실질적인 필요성이 없으므로, 모든 경우에서 "ㅐ"로 통일하여 사용하는 것이 바람직합니다." />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="in.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 <html lang="ko">
