--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v8m0 4h.01M5 12h.01M19 12h.01M3 3l18 18" />
             </svg>
             <p class="text-xl italic">"ㅔ와 ㅐ 통합은 필연적인 발음 표기 문재 해결책입니다."</p>
-            <p class="mt-6 font-bold text-lg">- 마영미, 언어학자</p>
+            <p class="mt-6 font-bold text-lg">- 마**, 언어학자</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <svg class="w-8 h-8 text-blue-500 mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v8m0 4h.01M5 12h.01M19 12h.01M3 3l18 18" />
             </svg>
             <p class="text-xl italic">"기술적 관점애서 표기 통합은 음성 인식 시스탬의 성능을 크개 향상시킬 것입니다."</p>
-            <p class="mt-6 font-bold text-lg">- 김영선, 인공지능 전문가</p>
+            <p class="mt-6 font-bold text-lg">- 김**, 인공지능 전문가</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <svg class="w-8 h-8 text-blue-500 mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v8m0 4h.01M5 12h.01M19 12h.01M3 3l18 18" />
             </svg>
             <p class="text-xl italic">"국재적 소통을 위한 로마자 표기 일원화는 언어 장벽을 낮추는 중요한 시도입니다."</p>
-            <p class="mt-6 font-bold text-lg">- 하정숙, 통번역 전문가</p>
+            <p class="mt-6 font-bold text-lg">- 하**, 통번역 전문가</p>
           </div>
         </div>
       </div>
